Revision history for Rex

{{$NEXT}}
 [API CHANGES]

 [BUG FIXES]
 - Make group resource idempotent
 - Fix sysctl detection for Gentoo
 - Fix setting false values as sysctl parameters

 [DOCUMENTATION]
 - Clarify auth documentation
 - Clarify setting per-host authentication details within a group
 - Clarify documentation of configuring OpenSSH options

 [ENHANCEMENTS]
 - Check availability of sysctl command

 [MAJOR]

 [MINOR]

 [NEW FEATURES]

 [REVISION]

1.10.0 2020-05-05 Ferenc Erki <erkiferenc@gmail.com>
 [BUG FIXES]
 - Fix warning about redundant arguments when using sync with key
   authentication
 - Fix setting distributor when versioned feature flags are active
 - Remove default host of test tasks
 - Fix task hooks specified in Rexfile for tasks defined in modules

 [DOCUMENTATION]
 - Clarify sudo usage for multiple commands
 - Clarify task hooks documentation
 - Clarify usage and purpose of configuration methods
 - Clarify mkdir usage

 [ENHANCEMENTS]
 - Add on_change option for mkdir
 - Support package globs on FreeBSD

 [NEW FEATURES]
 - Add new configuration option to control attaching default authentication
   info to tasks
 - Initial support for package globs

1.9.0 2020-04-05 Ferenc Erki <erkiferenc@gmail.com>
 [BUG FIXES]
 - Fix setting custom waitpid_blocking_sleep_time
 - Fix autodie feature for local unlink commands

 [DOCUMENTATION]
 - Categorize file system commands based on ability to change contents
 - Clarify documentation of file system commands
 - Document configuration methods

 [NEW FEATURES]
 - Add write_utf8_files feature flag to control encoding of files written
   by Rex

1.8.2 2020-03-05 Ferenc Erki <erkiferenc@gmail.com>
 [BUG FIXES]
 - Fix namespace separator checks for tasks directly in Rexfile

 [REVISION]
 - Fix Travis builds on OS X

1.8.1 2020-02-05 Ferenc Erki <erkiferenc@gmail.com>
 [DOCUMENTATION]
 - Document embedded templates

 [REVISION]
 - Reformat changelog to match CPAN specifications