@@ -12,6 +12,7 @@ Revision history for Rex
  - Clarify auth documentation
  - Clarify setting per-host authentication details within a group
  - Clarify documentation of configuring OpenSSH options
+ - Clarify Rex::Transaction documentation
 
  [ENHANCEMENTS]
  - Check availability of sysctl command
